# matrix_benchmark

./: .gitmodules  CMakeLists.txt  run_all.py
benchmarks/: chol_arma_mat_vs_eigen_dmap.cc  chol_arma_mat_vs_eigen_smap.cc  chol_arma_mat_vs_eigen_smat.cc  common_config.hpp  gemm_arma_mat_vs_eigen_smap.cc
benchmarks/chol/: arma_mat.hpp  chol.hpp  eigen_map.hpp  eigen_mat.hpp
benchmarks/gemm/: arma_mat.hpp  eigen_map.hpp  eigen_mat.hpp
container_benchmarks/: common_config.hpp  deque_crud.hpp  traverse_by_id.cc  traverse_by_id_vector_vs_unordered_map.cc  traverse_by_iterator.cc  traverse_by_iterator_vector_vs_unordered_map.cc  traverse_foreach.cc  traverse_foreach_vector_vs_unordered_map.cc  unordered_map_crud.hpp  vector_crud.hpp
matrix_benchmarks/: chol_arma_mat_vs_eigen_dmap.cc  chol_arma_mat_vs_eigen_dmat.cc  common_config.hpp  gemm_arma_mat_vs_eigen_dmap.cc  gemm_arma_mat_vs_eigen_dmat.cc  gemm_arma_mat_vs_eigen_smat.cc  gemm_arma_vs_eigen_big.cc  gemm_arma_vs_eigen_small.cc
matrix_benchmarks/chol/: eigen_map.hpp  eigen_mat.hpp
matrix_benchmarks/gemm/: arma_mat.hpp  eigen_map.hpp
results/: chol_arma_mat_vs_eigen_dmap.html  chol_arma_mat_vs_eigen_dmat.html  chol_arma_mat_vs_eigen_smap.html  chol_arma_mat_vs_eigen_smat.html  gemm_arma_mat_vs_eigen_dmap.html  gemm_arma_mat_vs_eigen_dmat.html  gemm_arma_mat_vs_eigen_smap.html  gemm_arma_mat_vs_eigen_smat.html  gemm_arma_vs_eigen_big.html  gemm_arma_vs_eigen_small.html  sparse_cholesky.html  traverse_by_id.html  traverse_by_id_vector_vs_unordered_map.html  traverse_by_iterator.html  traverse_by_iterator_vector_vs_unordered_map.html  traverse_foreach.html  traverse_foreach_vector_vs_unordered_map.html
sparse_block_benchmarks/: common_config.hpp  inline.hpp  nonius.hpp  sparse_cholesky.cc  sparse_cholesky.hpp  timer.cc
